--- a/project.config.json
+++ b/project.config.json
@@ -30,12 +30,18 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
 					"name": "注册页面",
-					"pathName": "pages/register/index"
+					"pathName": "pages/register/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "我的页面",
+					"pathName": "pages/person/index"
 				}
 			]
 		}
