--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "wxa13bb45d82a8eca0",
-	"projectname": "%E5%B8%88%E5%82%85%E9%A9%BE%E5%88%B0",
+	"appid": "wxeb78b3b925ff9dd8",
+	"projectname": "%E5%B8%88%E5%82%85%E9%A9%BE%E5%88%B0-git",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
@@ -30,12 +30,19 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
 					"name": "注册页面",
-					"pathName": "pages/register/index"
+					"pathName": "pages/register/index",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "分享页面",
+					"pathName": "pages/share/index",
+					"query": ""
 				}
 			]
 		}
