手机号按钮注册

--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
         "pagePath": "pages/share/index",
         "iconPath": "images/fenxiang.png",
         "selectedIconPath": "images/fenxiang_active.png",
-        "text": "分享"
+        "text": "我的"
       }
     ]
   }
