--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
-	"appid": "wxeb78b3b925ff9dd8",
+	"appid": "wxa13bb45d82a8eca0",
 	"projectname": "%E5%B8%88%E5%82%85%E9%A9%BE%E5%88%B0-git-1",
 	"isGameTourist": false,
 	"condition": {
