--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
   },
   "tabBar": {
     "color": "#999999",
-    "selectedColor": "#000000",
+    "selectedColor": "#2db7f5",
     "borderStyle": "white",
     "backgroundColor": "#f5f5f5",
     "list": [
